# carvaouts-poc

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline.sh  test.ipynb
data/: factiva_lists_mapping.txt  few_shot_examples.csv  news_subjects.csv  text_tiling_grid_search_results.csv  text_tiling_metrics_based_on_sample_size.csv  unique_industries.csv
src/: main.py
src/df_llm_processor/: __init__.py  processor.py
src/export/: formatters.py
src/factiva/: __init__.py  classifying_articles.ipynb  common.py  creating_lists.ipynb  data_extraction.ipynb  extraction.py  factiva_samples.ipynb  gpt_4_1_nano_classification.ipynb  processing_articles.ipynb  processors.py  starter.ipynb  taxonomy.py
src/factiva_api/: common.py  explain.py  extract.py  extraction.py  lists.py  taxonomy.py
src/mapping/: __init__.py  company_mapper.py  industry_mapper.py
src/notebooks/: async_clf.ipynb  classifying_articles.ipynb  creating_lists.ipynb  data_extraction.ipynb  gpt_4_1_nano_classification.ipynb  joining_outputs.ipynb  merging_ddup_results.ipynb  ontology.ipynb  output_summarization.ipynb  processing_articles copy.ipynb  processing_articles.ipynb  starter.ipynb  text_tiler_improvements.ipynb
src/pipelines/: async_clf.py  finalize.py  hash_and_dedup.py  prepare_for_classification.py  preprocess_and_tile.py  ssim_dedup.py
src/processor/: __init__.py  article_segmentation.py  hash_and_dedup.py  preprocessor.py  semantic_deduplication.py  text_splitter.py  text_tiling_tokenizer.py
src/schemas/: models.py  prompts.py
src/utils/: helpers.py  (+2 more)
(+1 files in other folders)
